--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.6",
+    "puppeteer": "^24.23.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
