falta mejorar el diseño de los reportes y que se puedan descargar, arreglar la gestion de los roles

--- a/backend/.env
+++ b/backend/.env
@@ -9,11 +9,11 @@ COMPANY_NAME=Pangea Sistemas
 COMPANY_PHONE=(555) 123-4567
 
 # SendGrid Configuration
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=
 SENDGRID_FROM_EMAIL=elmawabo@gmail.com
 SENDGRID_FROM_NAME=pangea
 
 # Gmail Configuration (alternativa)
 GMAIL_USER=elmawabo@gmail.com
-GMAIL_APP_PASSWORD=qmfu hjht uawm ntxu
+GMAIL_APP_PASSWORD=
 USE_GMAIL=true
