--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "generate-samples": "node scripts/generateSamplePdfs.js"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +28,13 @@
     "helmet": "^7.1.0",
     "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
+    "juice": "^11.0.3",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.10",
     "puppeteer": "^24.23.0",
+    "sanitize-html": "^2.17.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
