--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,5 +11,7 @@ RUN npm run build
 # Serve
 FROM nginx:stable-alpine
 COPY --from=build /app/build /usr/share/nginx/html
+# Copy custom nginx config (proxy rules etc.) into the image
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
